# offline-map

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  README.md  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/src/backend/: main.py
backend/src/backend/core/: settings.py
backend/static/docs/: swagger.js
docker/: docker-compose.yaml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docker/tileserver/: config.json
docker/tileserver/styles/: dark.json  light.json
docs/: CHANGELOG.md  RELENG.md  index.md
frontend/: .env.production  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  app.tsx  main.tsx  vite-env.d.ts
frontend/src/components/atoms/: app-logo.tsx  app-map.tsx  mode-toggle.tsx
frontend/src/components/molecules/: app-sidebar-footer.tsx  app-sidebar-header.tsx
frontend/src/components/organisms/: app-sidebar.tsx
frontend/src/components/ui/: button.tsx  sidebar.tsx
frontend/src/hooks/: use-resolved-theme.tsx
frontend/src/routes/: __root.tsx  index.tsx
