[project]
name = "offline-map"
version = "1.0.0"
requires-python = ">=3.13"

[dependency-groups]
docs = ["mkdocs-material"]
lint = ["ruff==0.12.0"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # missing-trailing-comma
    "D100",   # undocumented-public-module
    "D203",   # incorrect-blank-line-before-class
    "D213",   # multi-line-summary-second-line
    "INP001", # implicit-namespace-package
]

[tool.uv.workspace]
members = ["backend"]
